--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <img src="images/mcpfp - 12Unun.png" class="logo" alt="A photo of ununnn__">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#">HomeASd</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Project</a></li>
                     <li><a href="#">Studies</a></li>    
