--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor architecto deserunt magnam mollitia deleniti, ex fugiat esse voluptate, velit sed sunt quaerat officiis at reiciendis consequuntur ipsa vitae tempore optio?</p>
+                    <p class="description">This is @ununnn__ introduction page. 
+                        Hello! I'm Unun, an 18-year-old university student immersing myself in academic studies by day and diving into virtual realms by night. As a part-time VTuber and Minecraft player, I embark on adventures with friends, streaming the fun on YouTube by participating in several SMP Projects. Come join me as I navigate the thrilling blend of academic pursuits and digital escapades, forging connections and making memories!</p>
                     
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -74,23 +75,28 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI?UX</span><br>Designing Website Interfaces</li>
-                            <li><span>Web Development</span><br>Write wasd coding</li>
-                            <li><span>Sleeping is my life</span><br>My life style</li>
+                            <li><span>Programming</span><br>Currently learning Python Java HTML CSS Javascript</li>
+                            <li><span>Video Editing</span><br>Exceptional editing skill on Premiere Pro</li>
+                            <li><span>Extracurricular</span><br>University Basketball & Badminton Team Player<br>A Decent Guitarist<br>Content Creator on Youtube</li>
+                            <li><span>Languages</span><br>Multilingual - Thai, English, Mandarin</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2000</span><br>22222222222222222222222222222</li>
-                            <li><span>2000-2001</span><br>33333333333333</li>
-                            <li><span>2001-2002</span><br>44444444444</li>
+                            <li><span>2006</span><br>Born</li>
+                            <li><span>2022-2023</span><br>Live Streaming on Twitch<br>FriendscraftSMP SS2</li>
+                            <li><span>2023-2024</span><br>FriendscraftSMP SS3, FriendscraftSMP SS4, FriendsCraft Queen<br>Detective Academy, Wizardry Academy, Zombian Project</li>
+                            <li><span>2023-Now</span><br>Working as 4EV Project's Vtuber<br>Start Developer's Journey</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>123123</span><br>asdasdasdasdasd</li>
-                            <li><span>123123-2001</span><br>33333333333333</li>
-                            <li><span>123123-2002</span><br>44444444444</li>
+                            <li><span>2010-2012</span><br>Kindergarten somewhere in Bangkok</li>
+                            <li><span>2013-2015</span><br>Elementary School - Saint Joseph Convent</li>
+                            <li><span>2015-2018</span><br>Elementay ~ Middle School - Anglo Singapore International School</li>
+                            <li><span>2019-2022</span><br>High School - International Community School Bangkok</li>
+                            <li><span>2023-Now</span><br>Studying at International School of Engineering Chulalongkorn University</li>
+
                         </ul>
                     </div>
                 </div>
@@ -109,7 +115,7 @@
                     <div class="layer">
                         <h3>FriendscraftSMP SS3</h3>
                         <p>Highschool Bodyguard Un</p>
-                        <a href="#"><i class="fa fa-hand-o-up"></i></a>
+                        <a href="https://www.youtube.com/playlist?list=PL_Il_pChtVaquVKGXXlisAWzGv7HbxTAE"><i class="fa fa-hand-o-up"></i></a>
                     </div>
                 </div>
                 <div class="project">
@@ -117,43 +123,43 @@
                     <div class="layer">
                         <h3>FriendscraftSMP SS4</h3>
                         <p>True Legend Anasthesia</p>
-                        <a href="#"><i class="fa fa-hand-o-up"></i></a>
+                        <a href="https://www.youtube.com/playlist?list=PL_Il_pChtVarNuvgCPgdB8SXD_gTapY-B"><i class="fa fa-hand-o-up"></i></a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="images/project3.png" alt="">
                     <div class="layer">
                         <h3>Detective Academy</h3>
-                        <p>Anna Stefa</p>
-                        <a href="#"><i class="fa fa-hand-o-up"></i></a>
+                        <p>HS Anna Stefan</p>
+                        <a href="https://www.youtube.com/playlist?list=PL_Il_pChtVarIgPheP0lI14KxjaAeqHpU"><i class="fa fa-hand-o-up"></i></a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="images/project4.png" alt="">
                     <div class="layer">
-                        <h3>Detective Academy</h3>
-                        <p>Anna Stefa</p>
-                        <a href="#"><i class="fa fa-hand-o-up"></i></a>
+                        <h3>Wizardry Academy</h3>
+                        <p>FiawkungSS1 Annatasia St. Clair</p>
+                        <a href="https://www.youtube.com/playlist?list=PL_Il_pChtVaqswmWh5dYwYxyAQwTXreBy"><i class="fa fa-hand-o-up"></i></a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="images/project5.png" alt="">
                     <div class="layer">
-                        <h3>Detective Academy</h3>
-                        <p>Anna Stefa</p>
-                        <a href="#"><i class="fa fa-hand-o-up"></i></a>
+                        <h3>FriendsCraft Queen วีรสตรี</h3>
+                        <p>แม่หญิง NateNapha</p>
+                        <a href="https://www.youtube.com/playlist?list=PL_Il_pChtVarmJNfIlwyadHnF_63LBPhY"><i class="fa fa-hand-o-up"></i></a>
                     </div>
                 </div>
                 <div class="project">
                     <img src="images/project6c.png" alt="">
                     <div class="layer">
-                        <h3>Detective Academy</h3>
-                        <p>Anna Stefa</p>
-                        <a href="#"><i class="fa fa-hand-o-up"></i></a>
+                        <h3>FriendsCraftSMP SS6</h3>
+                        <p>Garden of Eden ????</p>
+                        <a href="https://www.youtube.com/watch?v=UY837FOqkuE"><i class="fa fa-hand-o-up"></i></a>
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">Back to Top</a>
+            <a href="https://unchasa.in.th/" class="btn">Back to Top</a>
         </div>
     </div>
 <script>
