update about me

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
     
     <div id="project" data-aos="fade-up" data-aos-duration="2000">
-        <div class="container-about">
+        <div class="container-project">
             <h1 class="sub-title">My Projects</h1>
             <div class="projects-list">
                 <div class="project">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <a href="https://unchasa.in.th/" class="btn">Back to Top</a>
+            <a href="#header" class="btn">Back to Top</a>
         </div>
     </div>
 <script>
