--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ununnn__</title>
     <link rel="icon" type="image/x-icon" href="images/ouan.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="keywords" content="Unun YY">
@@ -31,6 +32,8 @@
             }
         })
     </script>
+        <div class="hidden_mobile">อ่านทำไม<br>มันใช้ไม่ได้</div>
+    <div class="all_container">
     <div id="header">
         <div class="container">
             <nav data-aos="fade-up" data-aos-duration="2000">
@@ -40,8 +43,6 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#project">Project</a></li>
                     <li><a href="#">???</a></li>    
-                
-
             </nav>
         </div>
         <div class="header-text" data-aos="fade-left" data-aos-duration="2000">
@@ -93,7 +94,7 @@
                         <ul>
                             <li><span>2010-2012</span><br>Kindergarten somewhere in Bangkok</li>
                             <li><span>2013-2015</span><br>Elementary School - Saint Joseph Convent</li>
-                            <li><span>2015-2018</span><br>Elementay ~ Middle School - Anglo Singapore International School</li>
+                            <li><span>2015-2018</span><br>Elementary ~ Middle School - Anglo Singapore International School</li>
                             <li><span>2019-2022</span><br>High School - International Community School Bangkok</li>
                             <li><span>2023-Now</span><br>Studying at International School of Engineering Chulalongkorn University</li>
 
@@ -162,6 +163,7 @@
             <a href="#header" class="btn">Back to Top</a>
         </div>
     </div>
+</div>
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
