--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             }
         })
     </script>
-        <div class="hidden_mobile">อ่านทำไม<br>มันใช้ไม่ได้</div>
+        <!-- <div class="hidden_mobile">อ่านทำไม<br>มันใช้ไม่ได้</div> -->
     <div class="all_container">
     <div id="header">
         <div class="container">
